fix: fix checkbox alignment issue

--- a/src/app/todo/todo.css
+++ b/src/app/todo/todo.css
@@ -69,7 +69,6 @@ ul {
 
 .todo-checkbox {
   flex: 0 0 auto;
-  margin-top: 6px;
 }
 
 .todo-text {
